# WarriorsTactics

./: CMakeLists.txt  README.md
src/: main.cpp
src/Core/Warrior/: Details.cpp  Details.hpp  Gender.cpp  Gender.hpp  GenderId.cpp  GenderId.hpp  Move.cpp  Move.hpp  MoveCategoryId.cpp  MoveCategoryId.hpp  MoveData.cpp  MoveData.hpp  MoveId.cpp  MoveId.hpp  Moves.cpp  Moves.hpp  Nature.cpp  Nature.hpp  NatureId.cpp  NatureId.hpp  StatId.hpp  Stats.cpp  Stats.hpp  StatsValues.cpp  StatsValues.hpp  Type.cpp  Type.hpp  TypeId.cpp  TypeId.hpp  Warrior.cpp  Warrior.hpp  WarriorData.cpp  WarriorData.hpp  WarriorId.cpp  WarriorId.hpp  WarriorInstance.cpp  WarriorInstance.hpp
